--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     
-    <title>Barber Shop</title>
+    <title>Barbearia do Chaves</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet"> <!--Font  txt-->
@@ -71,7 +71,7 @@
     </main>
     <footer>
         <img src="imgs/logo-white.png" alt="logo of Barber Shop">
-        <p class="copyright">&copy; Copyright: Guilherme Freitas da Silva. 2020</p> <!--&copy icon of (unicode)-->
+        <p class="copyright">&copy; Copyright: Carlos Henrique da Silva. 2020</p> <!--&copy icon of (unicode)-->
     </footer>
 
 </body>
